# template

./: .gitignore
axum/: Cargo.toml
axum/.cargo/: config.toml
axum/db/: index.rs  init.sql
axum/src/: main.rs
axum/src/config/: index.rs
axum/src/controllers/: auth.rs  user.rs
axum/src/db/: main.rs
axum/src/middlewares/: cors.rs
axum/src/models/: auth.rs  common.rs  mod.rs  user.rs
axum/src/routers/: admin.rs  auth.rs  mod.rs  user.rs
axum/src/services/: user.rs
axum/src/types/: user.rs
axum/tests/: main.rs
expo-react-native/: Dockerfile  docker-compose.yaml  dockerfile.build  package-lock.json  package.json
flutter-router-dio/: README.md  pubspec.yaml
flutter-router-dio/lib/: main.dart
node-publish-npm/: Readme.md  biome.json  nano-staged.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
react-native-github-action/: App.tsx  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml
react-ts/: package.json  pnpm-lock.yaml
react-ts/src/: App.tsx  (+1 more)
vue-cli/: .editorconfig  .swcrc  package.json  pnpm-lock.yaml  vue.config.js  webpack.config.cjs
vue-ts/: .eslintrc.cjs  .npmrc  .stylelintrc.cjs  package.json  pnpm-lock.yaml  vite.config.ts
vue-ts-chrome-extension/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
vue-ts-less/: .stylelintrc.cjs  package.json  pnpm-lock.yaml
vue-ts-sass/: .env  .env.development  .env.production  .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc.cjs  biome.json  env.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+58 files in other folders)
